@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group = 'br.com.emprestai'
@@ -10,18 +11,47 @@ repositories {
     mavenCentral()
 }
 
+sourceCompatibility = '23'
+targetCompatibility = '23'
+
+application {
+    // Remova 'mainModule' e use apenas 'mainClass'
+    mainClass = 'br.com.emprestai.view.Login'
+}
+
+javafx {
+    version = '23'
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
+}
+
 dependencies {
-    //JDBC mysql
-    implementation "mysql:mysql-connector-java:8.0.33"  // Conector MySQL para JDBC
-    // Adiciona a biblioteca jBCrypt
-    implementation 'org.mindrot:jbcrypt:0.4'
-    //Junit - Testes unitários
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'org.mindrot:jbcrypt:0.4'  // Agora funcionará sem problemas
+
+    // JavaFX e outras libs
+    implementation 'org.controlsfx:controlsfx:11.2.1'
+    implementation 'com.dlsc.formsfx:formsfx-core:11.6.0'
+    implementation 'net.synedra:validatorfx:0.5.0'
+    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
+    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
+    implementation 'eu.hansolo:tilesfx:21.0.3'
+
+    // Testes
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    
-    implementation 'org.mindrot:jbcrypt:0.4'
+}
 
+// Remova todas as configurações de módulos (não são mais necessárias)
+tasks.withType(JavaCompile) {
+    options.compilerArgs = []  // Limpa argumentos de compilação modular
+}
 
+tasks.withType(JavaExec) {
+    // Configuração simplificada para JavaFX (sem --add-modules)
+    jvmArgs = [
+            '--module-path', configurations.runtimeClasspath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml,javafx.web'
+    ]
 }
 
 test {
